# rust-game

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/assets/: main.cob
client/src/: client.rs  hand.rs  main.rs  player.rs  state.rs  texture.rs  ui.rs
experiments/: Cargo.toml
experiments/assets/: card_layout.ron
experiments/src/: main.rs  vector_ui.rs
server/: Cargo.toml
server-backend/: Cargo.toml
server-backend/src/: main.rs  messages.rs  room.rs
server-frontend/: Cargo.toml
server-frontend/src/: main.rs  message_generator.rs
server/src/: main.rs  messages.rs  player_component.rs  room.rs  server.rs  server_plugin.rs  types.rs
server/src/game/: game_event_processing.rs  game_event_structs.rs  game_events.rs  mod.rs  state.rs  systems.rs  turn_timer.rs
server/src/room/: mod.rs  room_components.rs  room_manager.rs  room_plugin.rs
shared/: Cargo.toml
shared/assets/: cards.toml
shared/src/: card_details.rs  channel.rs  core.rs  lib.rs  message_utils.rs  messages.rs
