[workspace]
members = [
    "shared",
    "server",
    "client",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto           = true
strip         = true    #minimize binary size with symbol stripping
codegen-units = 1       #maximize performance