[package]
name = "server-frontend"
version = "0.1.0"
edition = "2021"

[features]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
shared = { path = "../shared" }
bevy.workspace = true
bevy_cobweb.workspace = true
enfync.workspace = true
bevy_cobweb_ui        = { version = "0.5" }
bevy_simplenet = { workspace = true, features = ["client", "bevy"] }
url                   = { version = "2.4" }
wasm-timer            = { version = "0.2" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }