[package]
name = "server-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared         = { path = "../shared" }
bevy           = { version = "0.15" }
bevy_cobweb    = { version = "0.13" }
bevy_cobweb_ui = { version = "0.5", features = ["hot_reload"] }
bevy_simplenet = { version = "0.14.2", default-features = false, features = ["client", "bevy"] }
enfync         = { version = "0.1" }
url            = { version = "2.4" }
wasm-timer     = { version = "0.2" }


[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }