[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
shared         = { path = "../shared" }
bevy           = { version = "0.15" }
bevy_cobweb    = { version = "0.13" }
bevy_cobweb_ui = { version = "0.5", features = ["hot_reload"] }
bevy_vector_shapes = "0.9.3"
fontdue = "0.9.2"
serde = { version = "1.0.217", features = ["derive"] }
crossbeam-channel = "0.5.14"