[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "documentation",
    "bevy_pbr",
    "bevy_image",
    "bevy_render",
    "egui_clipboard",
]
documentation = ["bevy_reflect/documentation"]
bevy_render = ["dep:bevy_render", "dep:bevy_core_pipeline", "bevy_egui/render"]
egui_clipboard = ["bevy_egui/manage_clipboard"]
egui_open_url = ["bevy_egui/open_url"]
highlight_changes = []


[dependencies]
shared         = { path = "../shared" }
# Bevy
bevy           = { version = "0.15" }
bevy-inspector-egui = { version = "0.29.1"}
bevy_app = { version = "0.15.0" }
bevy_asset = { version = "0.15.0" }
bevy_color = { version = "0.15.0" }
bevy_core = { version = "0.15.0" }
bevy_ecs = { version = "0.15.0" }
bevy_hierarchy = { version = "0.15.0" }
bevy_log = { version = "0.15.0" }
bevy_math = { version = "0.15.0" }
bevy_reflect = { version = "0.15.0" }
bevy_state = { version = "0.15.0" }
bevy_time = { version = "0.15.0" }
bevy_utils = { version = "0.15.0" }
bevy_window = { version = "0.15.0" }

bevy_render = { version = "0.15.0", optional = true }
bevy_core_pipeline = { version = "0.15.0", optional = true }
bevy_pbr = { version = "0.15.0", optional = true }
bevy_image = { version = "0.15.0", optional = true }

egui = "0.30"
bevy_egui = { version = "0.32", default-features = false }
egui_dock = "0.15"
winit = { version = "0.30.8", features = ["x11"] }
fontdue = "0.9.3"

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "x11",
    "bevy_winit",
    "bevy_window",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_core_pipeline",
    "animation",
    "png",
    "zstd",
    "tonemapping_luts",
    "ktx2",
] }
