[package]
name = "server-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "*"
shared = { path = "../shared" }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0.135"
serde = "1.0.217"
tokio-stream = "0.1.17"
rand = "0.8.5"