[package]
name = "server-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "*"
shared = { path = "../shared" }
futures-util = "0.3.31"
url = "2.5.4"
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["v4"] }
clap = {  version = "4.5.26", features = ["derive"] }