[package]
name = "server-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = "1.0.217"
enfync = "0.1.6"
bevy                  = { version = "0.15",  default-features = false }
bevy_cobweb           = { version = "0.13" }
bevy_simplenet = { version = "0.14.2", features = ["server", "bevy"] }
tracing               = { version = "0.1" }
tracing-subscriber    = { version = "0.3" }
rand = "0.8.5"